# spritevault

./: .env  .gitignore  LICENSE  README.md  TODO.md  compose.yaml  docker-compose.yaml  pyproject.toml
database/: init.sql
spritecrawl/: .gitignore  pyproject.toml
spritecrawl/src/spritecrawl/: __init__.py  __main__.py  main.py
spritecrawl/src/spritecrawl/adapters/: __init__.py  _adapter.py  _util.py
spritecrawl/src/spritecrawl/adapters/sources/: __init__.py  _source_0.py  _source_1.py  _source_2.py  _source_3.py  _source_4.py  _source_5.py  _source_6.py
spritecrawl/src/spritecrawl/crawlers/: __init__.py  _context.py  _crawler.py  _router.py
spritecrawl/src/spritecrawl/crawlers/craftpix/: __init__.py  _common.py  _context.py  _crawler.py  _helpers.py  _routes.py  constants.py  crawler.py  routes.py
spritecrawl/src/spritecrawl/datatype/: __init__.py
spritecrawl/src/spritecrawl/extensions/: __init__.py  _playwright.py
spritecrawl/src/spritecrawl/resources/: __init__.py  _account.py  _database.py  _storage.py
spriteflow/: pyproject.toml
spriteflow/src/spriteflow/: __init__.py  assets.py  definitions.py  resources.py
spriteflow/src/spriteflow/assets/: __init__.py  _adapters.py  _crawlers.py  assets.py
spriteflow/src/spriteflow/resources/: __init__.py  _crawler.py  _database.py  _resources.py
spriteml/: pyproject.toml
spriteml/src/spriteml/: __init__.py
src/spritevault/: __init__.py
