[project]
name = "spritevault"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = []

[tool.uv.workspace]
members = ["spritecrawl", "spriteflow", "spriteml"]

[tool.uv.sources]
spritecrawl = { workspace = true }
spriteflow = { workspace = true }
spriteml = { workspace = true }

[project.scripts]
spritevault = "spritevault:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
