[project]
name = "spritecrawl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Andrei Ionescu", email = "voidwarden@yahoo.com" }]
requires-python = ">=3.13.3"
dependencies = [
    "aiofiles>=24.1.0",
    "crawlee[all]>=0.6.9",
    "python-dotenv>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
