[project]
name = "spriteflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Andrei Ionescu", email = "voidwarden@yahoo.com" }]
requires-python = ">=3.13.3"
dependencies = [
    "asyncpg>=0.30.0",
    "dagster>=1.10.17",
    "dagster-webserver>=1.10.17",
    "python-dotenv>=1.1.0",
    "spritecrawl",
    "spriteml",
]

[project.scripts]
spriteflow = "spriteflow:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
